add: Exercise 5 - Create a markdown cell to list data science libraries

--- a/c2-datascience-tools/DataScienceEcosystem.ipynb
+++ b/c2-datascience-tools/DataScienceEcosystem.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Exercise 2: Create markdown cell with title of the notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Science Tools and Ecosystem"
    ]
   },
@@ -35,6 +42,18 @@
     "3. C++\n",
     "4. Scala\n",
     "5. Julia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "1. Pandas\n",
+    "2. Numpy\n",
+    "3. ggplot\n",
+    "4. Seaborn\n",
+    "5. racet "
    ]
   },
   {
